[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/TerrainFolderSelectScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ImportProgressScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="TerrainFolderSelectScreen" parent="." instance=ExtResource( 2 )]

[node name="ImportProgressScreen" parent="." instance=ExtResource( 3 )]

visibility/visible = false

[node name="ErrorDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 20.0
margin/top = 40.0
margin/right = 1000.0
margin/bottom = 580.0
popup/exclusive = false
window/title = "Error"
dialog/hide_on_ok = true

[connection signal="end_step" from="." to="." method="_on_Main_end_step" flags=3]

[connection signal="import_complete" from="." to="." method="_on_Main_import_complete"]

[connection signal="start_step" from="." to="." method="_on_Main_start_step" flags=3]

[connection signal="next" from="TerrainFolderSelectScreen" to="." method="_on_TerrainFolderSelectScreen_next"]


